--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" type="text/css" href="styles/main_style.css">
 </head>
 <body>
+
+<ul class="head_menu">
+   <li class="head_menu_var"><a>Products</a><div class="square"></div></li>
+   <li class="head_menu_var"><a href="#">ideas</a><div class="square"></div></li>
+   <li class="head_menu_var"><a href="#">Brands</a><div class="square"></div></li>
+   <li class="head_menu_var"><a href="#">Gifts</a><div class="square"></div></li>
+   <li class="head_menu_var"><a href="#">Stores</a><div class="square"></div></li>
+</ul>
+
+
+
 <div class="container">
     <div class="block_odegda">
         <p class="name">Pure Slim Xe<span class="price">$60.00</span></p>
